Pull&Refresh improved

--- a/src/stylesheets/theme/theme.layout.styl
+++ b/src/stylesheets/theme/theme.layout.styl
@@ -32,6 +32,9 @@ body > section
     &.right
       box-shadow 1px 0 2px rgba(0,0,0,0.2)
 
+  &[data-pull] > article.active
+    box-shadow: 0 -1px 0 rgba(0,0,0,0.05)
+
 body > aside
   background-color: COLOR_contrast
   color: #fff
