--- a/src/stylesheets/theme/theme.base.styl
+++ b/src/stylesheets/theme/theme.base.styl
@@ -20,6 +20,6 @@ body
   letter-spacing: -0.05em
 
   & .theme
-    background-color: COLOR_theme-light
+    background-color: THEME-light
     &:active
-      background-color: COLOR_theme
+      background-color: THEME
