--- a/src/stylesheets/theme/theme.layout.styl
+++ b/src/stylesheets/theme/theme.layout.styl
@@ -10,22 +10,22 @@
 @import "__init.styl"
 
 body > section
-  background-color: COLOR_contrast
+  background-color: COLOR
   &, & a
     color: COLOR
   & > header
-    C = COLOR_theme
-    background-color: COLOR_theme
+    C = THEME
+    background-color: THEME
     box-shadow 0 2px 0 rgba(0,0,0,0.15), inset 0 1px 0 lighten(C, 20%), inset 0 -1px 0 darken(C, 20%)
     color: #fff
     border-radius (BORDER_radius * 2.5) (BORDER_radius * 2.5) 0 0
 
   & > footer, & nav[data-control=groupbar]
-    background-color: COLOR_contrast
+    background-color: COLOR
   & > article, & > [data-control="pull"]
     background-color: BACKGROUND
     &.splash
-      background: COLOR_theme
+      background: THEME
       color: #fff
   &.aside
     box-shadow -1px 0 2px rgba(0,0,0,0.2)
@@ -36,9 +36,9 @@ body > section
     box-shadow: 0 -1px 0 rgba(0,0,0,0.05)
 
 body > aside
-  background-color: COLOR_contrast
+  background-color: COLOR
   color: #fff
-  C = darken(COLOR_contrast, 20%)
+  C = darken(COLOR, 20%)
   & > header, > footer
     background-color: C
   & > header
