--- a/src/stylesheets/theme/theme.widget.notification.styl
+++ b/src/stylesheets/theme/theme.widget.notification.styl
@@ -23,14 +23,14 @@
       box-shadow(0 0 8px #444)
       & button, .button
         background: #fff
-        color: COLOR_theme
+        color: THEME
     &.confirm, &.html
       background: #e6e6e6
       color: #222
     &.error
-      background: COLOR_cancel
+      background: DANGER
     &.success
-      background: COLOR_success
+      background: SUCCESS
     &.error, &.success
       color: #fff
       & small
@@ -38,7 +38,7 @@
         font-weight: 100
     &.html
       & .title
-        background: COLOR_theme
+        background: THEME
         color: #fff
     &.push
       background: rgba(0,0,0,0.65)
