--- a/src/stylesheets/theme/theme.widget.styl
+++ b/src/stylesheets/theme/theme.widget.styl
@@ -15,9 +15,9 @@
   border-radius BORDER_radius
   font-weight: 700 !important
   &.count
-    background-color: COLOR_theme
+    background-color: THEME
   header .count
-    background-color: COLOR_theme-dark !important
+    background-color: THEME-dark !important
   footer &
     box-shadow inset 0 1px 1px rgba(255,255,255,0.3), 0 1px 2px rgba(0,0,0,0.5)
 
