--- a/src/stylesheets/__init.styl
+++ b/src/stylesheets/__init.styl
@@ -8,6 +8,7 @@ ASIDE_WIDTH_SMALL      = 64px
 ASIDE_SMALL_ICON       = 48px
 
 DEFAULT_TRANSITION     = easeOutSine
+DEFAULT_TRANSITION     = easeInCubic
 TRANSITION_TIME        = 400ms
 
 FONT_SIZE_TINY         = 11px
