Change duration of loading

--- a/src/stylesheets/lungo.widget.loading.styl
+++ b/src/stylesheets/lungo.widget.loading.styl
@@ -106,8 +106,8 @@
 
 section.show, section.active, .notification
   & .loading
-    -webkit-animation: rotatingLoader .5s  infinite linear
-    moz-animation:  rotatingLoader .5s  infinite linear
+    -webkit-animation: rotatingLoader 600ms  infinite linear
+    moz-animation:  rotatingLoader 600ms  infinite linear
 
 
 @-webkit-keyframes rotatingLoader
