Fix error in chaining notifications

--- a/src/stylesheets/lungo.widget.notification.styl
+++ b/src/stylesheets/lungo.widget.notification.styl
@@ -33,7 +33,8 @@ WINDOW_WIDTH = 280px
     position: relative
     opacity: 0
     text-align: center
-    transition-duration TRANSITION_TIME
+    transition-duration (TRANSITION_TIME / 2)
+    // transition-duration TRANSITION_TIME
     transition-timing-function DEFAULT_TRANSITION
     backface-visibility hidden
 
