--- a/src/stylesheets/theme/theme.layout.styl
+++ b/src/stylesheets/theme/theme.layout.styl
@@ -16,7 +16,8 @@ body > section
   & > header
     C = THEME
     background-color: THEME
-    box-shadow 0 2px 0 rgba(0,0,0,0.15), inset 0 1px 0 lighten(C, 20%), inset 0 -1px 0 darken(C, 20%)
+    // box-shadow 0 2px 0 rgba(0,0,0,0.15), inset 0 1px 0 lighten(C, 20%), inset 0 -1px 0 darken(C, 20%)
+    box-shadow 0 1px 2px rgba(0,0,0,0.2), inset 0 1px 1px lighten(C, 25%), inset 0 -1px 0 darken(C, 20%)
     color: #fff
     border-radius (BORDER_radius * 2.5) (BORDER_radius * 2.5) 0 0
 
