Fix error in mobile asides

--- a/src/stylesheets/lungo.layout.styl
+++ b/src/stylesheets/lungo.layout.styl
@@ -97,11 +97,10 @@ body
     min-width: ASIDE_WIDTH
     display: none
     z-index: -1
-    &.active
+    &.active, &.show
       display-box()
     &.show
       z-index: 0
-      display-box()
     &.right
       right: 0px
 
