Fix error in aside lists

--- a/src/stylesheets/lungo.layout.styl
+++ b/src/stylesheets/lungo.layout.styl
@@ -94,7 +94,7 @@ body
   /* ================================= ASIDE ================================= */
   /* ========================================================================= */
   & > aside
-    min-width: ASIDE_WIDTH
+    width: ASIDE_WIDTH
     display: none
     z-index: -1
     &.active, &.show
