--- a/src/stylesheets/lungo.media.tablet.styl
+++ b/src/stylesheets/lungo.media.tablet.styl
@@ -1,5 +1,3 @@
-@import "__init.styl"
-
 /* ==== Tablet ==== */
 @media only screen and (min-width: 768px)
   body
@@ -37,6 +35,7 @@
 
 @-webkit-keyframes showing
   0%
+    opacity: 0
     transform translateX(100%)
   100%
     opacity: 1
