--- a/src/stylesheets/lungo.media.tablet.styl
+++ b/src/stylesheets/lungo.media.tablet.styl
@@ -11,13 +11,11 @@
       transition-duration TRANSITION_TIME
       margin-right: -(ASIDE_WIDTH)
       &.show
-        transform translateX(0%)
-        margin-right: 0
-        transition-delay (TRANSITION_TIME / 2)
+        transform translateX(0px)
+        margin-right: 0px
       &.hide
         transform translateX(-100%)
-        margin-right: -(ASIDE_WIDTH)
-        transition-delay 0 !important
+        margin-right: -(ASIDE_WIDTH) !important
 
     & > section
       display: none
